# kimberlite

./: .gitignore  .lycheeignore  BUILD_VERIFICATION.md  BYZANTINE_BUG_REPORT.md  BYZANTINE_TESTING.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTENT_PLAN_COMPLETE.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_REFACTOR_PROGRESS.md  DOCUMENTATION_UPDATES.md  DOWNLOAD_URLS.md  Dockerfile  Dockerfile.release  PHASE10_COMPLETE.md  PHASE11_COMPLETE.md  PHASE1_COMPLETE.md  PHASE1_STATUS.md  PHASE1_VALIDATION_RESULTS.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE3_PROGRESS.md  PHASE4_COMPLETE.md  PHASE4_DEFERRED_COMPLETE.md  PHASE5_COMPLETE.md  PHASE5_SUMMARY.md  PHASE6_COMPLETE.md  PHASE7_COMPLETE.md  PHASE8_COMPLETE.md  PHASE9_COMPLETE.md  PHASE_3_COMPLETION.md  PHASE_4_COMPLETION.md  PLAN.md  PRIORITY2_COMPLETE.md  PRIORITY3_CI_TESTING.md  QUICKSTART_BYZANTINE.md  README.md  ROADMAP.md  (+18 more)
crates/kimberlite-abac/: Cargo.toml
crates/kimberlite-abac/src/: attributes.rs  evaluator.rs  kani_proofs.rs  lib.rs  policy.rs
crates/kimberlite-admin/: Cargo.toml
crates/kimberlite-admin/src/: main.rs
crates/kimberlite-bench/: Cargo.toml
crates/kimberlite-bench/benches/: crypto.rs  end_to_end.rs  harness_smoke.rs  kernel.rs  postgres_comparative.rs  storage.rs  wire.rs
crates/kimberlite-bench/src/: lib.rs
crates/kimberlite-chaos/: Cargo.toml
crates/kimberlite-chaos-shim/: Cargo.toml
crates/kimberlite-chaos-shim/src/: main.rs
crates/kimberlite-chaos/src/: chaos_controller.rs  cluster_network.rs  cluster_vm.rs  invariant_checker.rs  lib.rs  qmp.rs  scenarios.rs
crates/kimberlite-cli/: .gitignore  Cargo.toml  README.md  kimberlite.toml
crates/kimberlite-cli/src/: main.rs
crates/kimberlite-cli/tests/: argument_parsing.rs  command_integration.rs
crates/kimberlite-client/: Cargo.toml
crates/kimberlite-client/src/: admin.rs  async_client.rs  audit_context.rs  client.rs  compliance_api.rs  domain_error.rs  error.rs  framing.rs  lib.rs  pool.rs  query_builder.rs  retry.rs  subscription.rs  tenant_pool.rs  typed_row.rs
crates/kimberlite-client/tests/: alter_table_notebar_repro.rs  async_parity.rs  backend_parity.rs  consent_basis.rs  e2e_compliance_phase6.rs  e2e_finance.rs  e2e_healthcare.rs  masking_policy_crud.rs
crates/kimberlite-cluster/: Cargo.toml  README.md
crates/kimberlite-cluster/src/: config.rs  error.rs  lib.rs  node.rs  supervisor.rs
crates/kimberlite-compliance/: Cargo.toml
crates/kimberlite-compliance/src/: audit.rs  breach.rs  certificate.rs  classification.rs  consent.rs  erasure.rs  export.rs  kani_proofs.rs  lib.rs  main.rs  purpose.rs  qualified_timestamp.rs  report.rs  retention.rs  signature_binding.rs  validator.rs
crates/kimberlite-compliance/tests/: proptest_audit_sdk_entry.rs  proptest_state_machines.rs
crates/kimberlite-config/: Cargo.toml
crates/kimberlite-config/src/: lib.rs  loader.rs  paths.rs
crates/kimberlite-crypto/: Cargo.toml
crates/kimberlite-crypto/src/: anonymize.rs  chain.rs  crc32.rs  encryption.rs  field.rs  hash.rs  kani_proofs.rs  lib.rs  signature.rs  tests_assertions.rs
crates/kimberlite-dev/: Cargo.toml
crates/kimberlite-dev/src/: lib.rs  server.rs
crates/kimberlite-directory/: Cargo.toml
crates/kimberlite-directory/proptest-regressions/: tests.txt
crates/kimberlite-directory/src/: lib.rs  tests.rs
crates/kimberlite-doc-tests/: Cargo.toml
crates/kimberlite-doc-tests/src/: lib.rs
crates/kimberlite-event-sourcing/: Cargo.toml
crates/kimberlite-event-sourcing/src/: lib.rs
crates/kimberlite-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml  kimberlite-ffi.h
crates/kimberlite-ffi/src/: lib.rs
crates/kimberlite-io/: Cargo.toml
crates/kimberlite-io/src/: aligned.rs  backend.rs  error.rs  lib.rs  sync_backend.rs  tests.rs
crates/kimberlite-kernel/: Cargo.toml
crates/kimberlite-kernel/docs/: assertions.md
crates/kimberlite-kernel/src/: classification.rs  command.rs  effects.rs  kani_proofs.rs  kernel.rs  lib.rs  masking.rs  runtime.rs  state.rs  state_hash.rs  tests.rs  tests_assertions.rs  traits.rs
crates/kimberlite-kernel/tests/: properties_integration.rs
crates/kimberlite-mcp/: Cargo.toml
crates/kimberlite-mcp/src/: audit.rs  error.rs  handler.rs  lib.rs  server.rs  tests.rs  tool.rs
crates/kimberlite-migration/: Cargo.toml  README.md
crates/kimberlite-migration/src/: error.rs  file.rs  lib.rs  lock.rs  tracker.rs
crates/kimberlite-node/: Cargo.toml
crates/kimberlite-node/src/: lib.rs
crates/kimberlite-oracle/: Cargo.toml
crates/kimberlite-oracle/src/: duckdb.rs  kimberlite.rs  lib.rs
crates/kimberlite-properties/: Cargo.toml
crates/kimberlite-properties/src/: lib.rs  registry.rs
crates/kimberlite-query/: Cargo.toml
crates/kimberlite-query/src/: correlated.rs  depth_check.rs  dml_planner.rs  error.rs  executor.rs  explain.rs  expression.rs  information_schema.rs  key_encoder.rs  lib.rs  parse_cache.rs  parser.rs  plan.rs  planner.rs  rbac_filter.rs  schema.rs  tests.rs  value.rs  window.rs
crates/kimberlite-query/tests/: vopr_query_test.rs
crates/kimberlite-rbac/: Cargo.toml
crates/kimberlite-server/: Cargo.toml
crates/kimberlite-sim-macros/: Cargo.toml
fuzz/: .gitignore  Cargo.toml  README.md  README_SQL_DIFFERENTIAL.md  ci-fuzz.sh
fuzz/fuzz_targets/: fuzz_abac_evaluator.rs  fuzz_auth_token.rs  fuzz_crypto_encrypt.rs  fuzz_kernel_command.rs  fuzz_rbac_bypass.rs  fuzz_rbac_injection.rs  fuzz_rbac_rewrite.rs  fuzz_scalar_expr.rs  fuzz_sql_differential.rs  fuzz_sql_grammar.rs  fuzz_sql_metamorphic.rs  fuzz_sql_norec.rs  fuzz_sql_parser.rs  fuzz_sql_pqs.rs  fuzz_storage_decompress.rs  fuzz_storage_record.rs  fuzz_superblock.rs  fuzz_vsr_protocol.rs  fuzz_vsr_typed.rs  fuzz_wire_deserialize.rs  fuzz_wire_typed.rs  fuzz_wire_vsr.rs  test_sql_differential.rs
pressurecraft/: Cargo.toml  IMPLEMENTATION.md  README.md
pressurecraft/examples/: counter.rs  event_log.rs  mini_database.rs
pressurecraft/src/: lib.rs  step1_pure_functions.rs  step2_commands_effects.rs  step3_state_machine.rs  step4_mini_kernel.rs  step5_full_kernel.rs  tests.rs
(+1251 files in other folders)
