[workspace]
resolver = "2"
members = [
    "crates/kimberlite",
    "crates/kmb-types",
    "crates/kmb-crypto",
    "crates/kmb-storage",
    "crates/kmb-kernel",
    "crates/kmb-directory",
    "crates/kmb-agent-protocol",
    "crates/kmb-sim",
    "crates/kmb-vsr",
    "crates/kmb-store",
    "crates/kmb-query",
    "crates/kmb-wire",
    "crates/kmb-server",
    "crates/kmb-client",
    "crates/kmb-admin",
    "crates/kmb-sharing",
    "crates/kmb-mcp",
    "crates/kimberlite-cli",
    "crates/kimberlite-ffi",
]
default-members = ["crates/kimberlite"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/kimberlitedb/kimberlite"
homepage = "https://github.com/kimberlitedb/kimberlite"
documentation = "https://docs.rs/kimberlite"
keywords = ["database", "compliance", "audit", "healthcare", "event-sourcing"]
categories = ["database", "data-structures"]

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Allow patterns that are reasonable during early development
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_docs_in_private_items = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
return_self_not_must_use = "allow"

[workspace.dependencies]
# Core
anyhow = "1"
thiserror = "2"
bytes = { version = "1", features = ["serde"] }
tracing = "0.1"

# Cryptography
blake3 = "1"
ed25519-dalek = { version = "2", features = ["rand_core", "zeroize"] }
chacha20poly1305 = { version = "0.11.0-rc.2", features = ["rand_core"] }
rand = "0.8"
getrandom = "0.3.4"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
subtle = "2.6.1"
aes-gcm = "0.11.0-rc.2"
sha2 = "0.11.0-rc.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
base64 = "0.22"

# CLI
clap = { version = "4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Checksums
crc32fast = "1"

# Testing
proptest = "1"
test-case = "3"
tempfile = "3"

# Benchmarking & Profiling
criterion = { version = "0.8", features = ["html_reports"] }
hdrhistogram = "7"

# SQL parsing
sqlparser = "0.54"

# Parallelism
rayon = "1.10"
crossbeam-queue = "0.3"

# Networking
mio = { version = "1", features = ["net", "os-poll"] }

# TLS
rustls = "0.23"
rustls-pemfile = "2"

# Authentication
jsonwebtoken = "9"

# Metrics & Observability
prometheus = { version = "0.13", default-features = false }

# Signal handling
signal-hook = "0.3"
signal-hook-mio = { version = "0.2", features = ["support-v1_0"] }

# Internal crates
kimberlite = { path = "crates/kimberlite" }
kmb-types = { path = "crates/kmb-types" }
kmb-crypto = { path = "crates/kmb-crypto" }
kmb-storage = { path = "crates/kmb-storage" }
kmb-kernel = { path = "crates/kmb-kernel" }
kmb-directory = { path = "crates/kmb-directory" }
kmb-agent-protocol = { path = "crates/kmb-agent-protocol" }
kmb-sim = { path = "crates/kmb-sim" }
kmb-vsr = { path = "crates/kmb-vsr" }
kmb-store = { path = "crates/kmb-store" }
kmb-query = { path = "crates/kmb-query" }
kmb-wire = { path = "crates/kmb-wire" }
kmb-server = { path = "crates/kmb-server" }
kmb-client = { path = "crates/kmb-client" }
kmb-sharing = { path = "crates/kmb-sharing" }
kmb-mcp = { path = "crates/kmb-mcp" }
kimberlite-ffi = { path = "crates/kimberlite-ffi" }
