[workspace]
resolver = "2"
members = [
    "crates/kimberlite",
    "crates/kimberlite-types",
    "crates/kimberlite-crypto",
    "crates/kimberlite-storage",
    "crates/kimberlite-kernel",
    "crates/kimberlite-directory",
    "crates/kimberlite-agent-protocol",
    "crates/kimberlite-sim",
    "crates/kimberlite-sim-macros",
    "crates/kimberlite-vsr",
    "crates/kimberlite-store",
    "crates/kimberlite-query",
    "crates/kimberlite-wire",
    "crates/kimberlite-server",
    "crates/kimberlite-client",
    "crates/kimberlite-admin",
    "crates/kimberlite-sharing",
    "crates/kimberlite-mcp",
    "crates/kimberlite-config",
    "crates/kimberlite-dev",
    "crates/kimberlite-migration",
    "crates/kimberlite-cluster",
    "crates/kimberlite-studio",
    "crates/kimberlite-cli",
    "crates/kimberlite-ffi",
    "crates/kimberlite-bench",
]
exclude = ["fuzz"]
default-members = ["crates/kimberlite"]

[workspace.package]
version = "0.4.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/kimberlitedb/kimberlite"
homepage = "https://github.com/kimberlitedb/kimberlite"
documentation = "https://docs.rs/kimberlite"
keywords = ["database", "compliance", "audit", "healthcare", "event-sourcing"]
categories = ["database", "data-structures"]

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Allow patterns that are reasonable during early development
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_docs_in_private_items = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
return_self_not_must_use = "allow"

[workspace.dependencies]
# Core
anyhow = "1"
thiserror = "2"
bytes = { version = "1", features = ["serde"] }
tracing = "0.1"

# Cryptography
blake3 = "1"
ed25519-dalek = { version = "2", features = ["rand_core", "zeroize"] }
chacha20poly1305 = { version = "0.10", features = ["rand_core"] }
rand = "0.9"
getrandom = "0.3.4"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
subtle = "2.6.1"
aes-gcm = "0.10"
sha2 = "0.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }
base64 = "0.22"
toml = "0.9"

# Configuration
config = { version = "0.15", default-features = false, features = ["toml"] }
directories = "6"

# CLI
clap = { version = "4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Testing
proptest = "1"
test-case = "3"
tempfile = "3"

# Benchmarking & Profiling
criterion = { version = "0.8", features = ["html_reports"] }
hdrhistogram = "7"

# SQL parsing
sqlparser = "0.54"

# Decimal arithmetic
rust_decimal = "1.33"

# Parallelism
rayon = "1.10"
crossbeam-queue = "0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Networking
mio = { version = "1", features = ["net", "os-poll"] }

# TLS (using aws-lc-rs backend to avoid ring compilation issues on Apple Silicon)
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "aws_lc_rs"] }

# Authentication (using aws_lc_rs to avoid ring on Apple Silicon)
jsonwebtoken = { version = "10", default-features = false, features = ["use_pem", "aws_lc_rs"] }

# Metrics & Observability
prometheus = { version = "0.14", default-features = false }

# Signal handling
signal-hook = "0.4"
signal-hook-mio = { version = "0.3", features = ["support-v1_0"] }

# Internal crates
kimberlite = { path = "crates/kimberlite" }
kimberlite-types = { path = "crates/kimberlite-types" }
kimberlite-crypto = { path = "crates/kimberlite-crypto" }
kimberlite-storage = { path = "crates/kimberlite-storage" }
kimberlite-kernel = { path = "crates/kimberlite-kernel" }
kimberlite-directory = { path = "crates/kimberlite-directory" }
kimberlite-agent-protocol = { path = "crates/kimberlite-agent-protocol" }
kimberlite-sim = { path = "crates/kimberlite-sim" }
kimberlite-sim-macros = { path = "crates/kimberlite-sim-macros" }
kimberlite-vsr = { path = "crates/kimberlite-vsr" }
kimberlite-store = { path = "crates/kimberlite-store" }
kimberlite-query = { path = "crates/kimberlite-query" }
kimberlite-wire = { path = "crates/kimberlite-wire" }
kimberlite-server = { path = "crates/kimberlite-server" }
kimberlite-client = { path = "crates/kimberlite-client" }
kimberlite-config = { path = "crates/kimberlite-config" }
kimberlite-dev = { path = "crates/kimberlite-dev" }
kimberlite-migration = { path = "crates/kimberlite-migration" }
kimberlite-cluster = { path = "crates/kimberlite-cluster" }
kimberlite-studio = { path = "crates/kimberlite-studio" }
kimberlite-sharing = { path = "crates/kimberlite-sharing" }
kimberlite-mcp = { path = "crates/kimberlite-mcp" }
kimberlite-ffi = { path = "crates/kimberlite-ffi" }
