[workspace]
resolver = "2"
members = [
    "crates/kimberlite",
    "crates/kimberlite-types",
    "crates/kimberlite-crypto",
    "crates/kimberlite-storage",
    "crates/kimberlite-kernel",
    "crates/kimberlite-directory",
    "crates/kimberlite-agent-protocol",
    "crates/kimberlite-sim",
    "crates/kimberlite-sim-macros",
    "crates/kimberlite-vsr",
    "crates/kimberlite-store",
    "crates/kimberlite-query",
    "crates/kimberlite-wire",
    "crates/kimberlite-server",
    "crates/kimberlite-client",
    "crates/kimberlite-admin",
    "crates/kimberlite-sharing",
    "crates/kimberlite-mcp",
    "crates/kimberlite-config",
    "crates/kimberlite-dev",
    "crates/kimberlite-migration",
    "crates/kimberlite-cluster",
    "crates/kimberlite-studio",
    "crates/kimberlite-cli",
    "crates/kimberlite-ffi",
    "crates/kimberlite-bench",
    "crates/kimberlite-doc-tests",
    "crates/kimberlite-compliance",
    "crates/kimberlite-rbac",
    "crates/kimberlite-abac",
    "crates/kimberlite-io",
    "crates/kimberlite-oracle",
]
exclude = ["fuzz", "examples/rust"]
default-members = ["crates/kimberlite"]

[workspace.package]
version = "0.4.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
authors = ["Jared Reyes <jared.reyes@kimberlite.dev>"]
repository = "https://github.com/kimberlitedb/kimberlite"
homepage = "https://github.com/kimberlitedb/kimberlite"
documentation = "https://docs.rs/kimberlite"
keywords = ["database", "compliance", "audit", "healthcare", "event-sourcing"]
categories = ["database", "data-structures"]

[workspace.lints.rust]
unsafe_code = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Allow patterns that are reasonable during early development
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_docs_in_private_items = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
return_self_not_must_use = "allow"

# Additional allows for lints that would require significant refactoring
doc_markdown = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
too_many_arguments = "allow"
large_enum_variant = "allow"
manual_let_else = "allow"
format_collect = "allow"
if_not_else = "allow"
manual_flatten = "allow"
too_many_lines = "allow"
single_match_else = "allow"
struct_excessive_bools = "allow"
needless_pass_by_value = "allow"
only_used_in_recursion = "allow"

[workspace.dependencies]
# Core
anyhow = "1"
thiserror = "2"
bytes = { version = "1", features = ["serde"] }
tracing = "0.1"

# Cryptography
blake3 = "1"
ed25519-dalek = { version = "2", features = ["rand_core", "zeroize"] }
chacha20poly1305 = { version = "0.10", features = ["rand_core"] }
rand = "0.8"
getrandom = "0.4.1"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
subtle = "2.6.1"
aes-gcm = { version = "0.10", features = ["aes"] }
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"  # asm feature disabled for Windows compatibility

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }
base64 = "0.22"
toml = "0.9"

# Configuration
config = { version = "0.15", default-features = false, features = ["toml"] }
directories = "6"

# CLI
clap = { version = "4", features = ["derive"] }
rustyline = { version = "15", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# PDF generation
printpdf = "0.7"

# Testing
proptest = "1"
test-case = "3"
tempfile = "3"
doc-comment = "0.3"

# Benchmarking & Profiling
criterion = { version = "0.8", features = ["html_reports"] }
hdrhistogram = "7"

# SQL parsing
sqlparser = "0.54"

# SQL differential testing
duckdb = { version = "1.1", features = ["bundled"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Decimal arithmetic
rust_decimal = "1.33"

# Memory-mapped I/O
memmap2 = "0.9"

# Parallelism
rayon = "1.10"
crossbeam-queue = "0.3"

# Compression
lz4_flex = "0.11"
zstd = "0.13"

# Thread affinity
core_affinity = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Networking
mio = { version = "1", features = ["net", "os-poll"] }

# TLS (using aws-lc-rs backend to avoid ring compilation issues on Apple Silicon)
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "aws_lc_rs"] }

# Authentication (using aws_lc_rs to avoid ring on Apple Silicon)
jsonwebtoken = { version = "10", default-features = false, features = ["use_pem", "aws_lc_rs"] }

# Metrics & Observability
prometheus = { version = "0.14", default-features = false }

# Signal handling
signal-hook = "0.4"
signal-hook-mio = { version = "0.3", features = ["support-v1_0"] }

# Internal crates
kimberlite = { version = "0.4.0", path = "crates/kimberlite" }
kimberlite-types = { version = "0.4.0", path = "crates/kimberlite-types" }
kimberlite-crypto = { version = "0.4.0", path = "crates/kimberlite-crypto" }
kimberlite-storage = { version = "0.4.0", path = "crates/kimberlite-storage" }
kimberlite-kernel = { version = "0.4.0", path = "crates/kimberlite-kernel" }
kimberlite-directory = { version = "0.4.0", path = "crates/kimberlite-directory" }
kimberlite-agent-protocol = { version = "0.4.0", path = "crates/kimberlite-agent-protocol" }
kimberlite-sim = { version = "0.4.0", path = "crates/kimberlite-sim" }
kimberlite-sim-macros = { version = "0.4.0", path = "crates/kimberlite-sim-macros" }
kimberlite-vsr = { version = "0.4.0", path = "crates/kimberlite-vsr" }
kimberlite-store = { version = "0.4.0", path = "crates/kimberlite-store" }
kimberlite-query = { version = "0.4.0", path = "crates/kimberlite-query" }
kimberlite-wire = { version = "0.4.0", path = "crates/kimberlite-wire" }
kimberlite-server = { version = "0.4.0", path = "crates/kimberlite-server" }
kimberlite-client = { version = "0.4.0", path = "crates/kimberlite-client" }
kimberlite-config = { version = "0.4.0", path = "crates/kimberlite-config" }
kimberlite-dev = { version = "0.4.0", path = "crates/kimberlite-dev" }
kimberlite-migration = { version = "0.4.0", path = "crates/kimberlite-migration" }
kimberlite-cluster = { version = "0.4.0", path = "crates/kimberlite-cluster" }
kimberlite-studio = { version = "0.4.0", path = "crates/kimberlite-studio" }
kimberlite-sharing = { version = "0.4.0", path = "crates/kimberlite-sharing" }
kimberlite-mcp = { version = "0.4.0", path = "crates/kimberlite-mcp" }
kimberlite-ffi = { version = "0.4.0", path = "crates/kimberlite-ffi" }
kimberlite-compliance = { version = "0.4.0", path = "crates/kimberlite-compliance" }
kimberlite-rbac = { version = "0.4.0", path = "crates/kimberlite-rbac" }
kimberlite-abac = { version = "0.4.0", path = "crates/kimberlite-abac" }
kimberlite-io = { version = "0.4.0", path = "crates/kimberlite-io" }
kimberlite-oracle = { version = "0.4.0", path = "crates/kimberlite-oracle" }

# Maximum optimization for CLI binaries
[profile.release-official]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

# Faster compilation for library crates
[profile.lib-release]
inherits = "release"
lto = "thin"
codegen-units = 16
strip = false
