[package]
name = "kimberlite-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bytes = "1.10"
chrono = "0.4"

[dependencies.kimberlite]
path = "../crates/kimberlite"

[dependencies.kmb-wire]
package = "kimberlite-wire"
path = "../crates/kimberlite-wire"

[dependencies.kmb-crypto]
package = "kimberlite-crypto"
path = "../crates/kimberlite-crypto"

[dependencies.kimberlite-query]
path = "../crates/kimberlite-query"

[dependencies.kmb-storage]
package = "kimberlite-storage"
path = "../crates/kimberlite-storage"

[dependencies.kmb-kernel]
package = "kimberlite-kernel"
path = "../crates/kimberlite-kernel"

[dependencies.kimberlite-rbac]
path = "../crates/kimberlite-rbac"

[dependencies.kimberlite-abac]
path = "../crates/kimberlite-abac"

[dependencies.kimberlite-types]
path = "../crates/kimberlite-types"

[dependencies.kimberlite-oracle]
path = "../crates/kimberlite-oracle"

[dependencies.sqlparser]
version = "0.54"

[dependencies.duckdb]
version = "1.1"
features = ["bundled"]

[[bin]]
name = "fuzz_wire_deserialize"
path = "fuzz_targets/fuzz_wire_deserialize.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_crypto_encrypt"
path = "fuzz_targets/fuzz_crypto_encrypt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_sql_parser"
path = "fuzz_targets/fuzz_sql_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_storage_record"
path = "fuzz_targets/fuzz_storage_record.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_kernel_command"
path = "fuzz_targets/fuzz_kernel_command.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_rbac_rewrite"
path = "fuzz_targets/fuzz_rbac_rewrite.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_rbac_bypass"
path = "fuzz_targets/fuzz_rbac_bypass.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_sql_differential"
path = "fuzz_targets/fuzz_sql_differential.rs"
test = false
doc = false
bench = false

[[bin]]
name = "test_sql_differential"
path = "fuzz_targets/test_sql_differential.rs"

[package.metadata.cargo-machete]
# kimberlite is the fuzz target
# duckdb is listed to force bundled linking; actual usage is through kimberlite-oracle
ignored = ["kimberlite", "duckdb"]
