[package]
name = "kimberlite-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bytes = "1.10"
chrono = "0.4"
arbitrary = { version = "1", features = ["derive"] }
tempfile = "3"
postcard = { version = "1", features = ["alloc"] }

[dependencies.kimberlite]
path = "../crates/kimberlite"

[dependencies.kmb-wire]
package = "kimberlite-wire"
path = "../crates/kimberlite-wire"

[dependencies.kmb-crypto]
package = "kimberlite-crypto"
path = "../crates/kimberlite-crypto"

[dependencies.kimberlite-query]
path = "../crates/kimberlite-query"

[dependencies.kmb-storage]
package = "kimberlite-storage"
path = "../crates/kimberlite-storage"

[dependencies.kmb-kernel]
package = "kimberlite-kernel"
path = "../crates/kimberlite-kernel"

[dependencies.kimberlite-vsr]
path = "../crates/kimberlite-vsr"

[dependencies.kimberlite-server]
path = "../crates/kimberlite-server"

[dependencies.kimberlite-sim]
path = "../crates/kimberlite-sim"

[dependencies.kimberlite-rbac]
path = "../crates/kimberlite-rbac"

[dependencies.kimberlite-abac]
path = "../crates/kimberlite-abac"

[dependencies.kimberlite-types]
path = "../crates/kimberlite-types"

[dependencies.sqlparser]
version = "0.54"

[[bin]]
name = "fuzz_wire_deserialize"
path = "fuzz_targets/fuzz_wire_deserialize.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_crypto_encrypt"
path = "fuzz_targets/fuzz_crypto_encrypt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_sql_parser"
path = "fuzz_targets/fuzz_sql_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_storage_record"
path = "fuzz_targets/fuzz_storage_record.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_kernel_command"
path = "fuzz_targets/fuzz_kernel_command.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_rbac_rewrite"
path = "fuzz_targets/fuzz_rbac_rewrite.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_rbac_bypass"
path = "fuzz_targets/fuzz_rbac_bypass.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_abac_evaluator"
path = "fuzz_targets/fuzz_abac_evaluator.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_wire_vsr"
path = "fuzz_targets/fuzz_wire_vsr.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_storage_decompress"
path = "fuzz_targets/fuzz_storage_decompress.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_superblock"
path = "fuzz_targets/fuzz_superblock.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_auth_token"
path = "fuzz_targets/fuzz_auth_token.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_sql_metamorphic"
path = "fuzz_targets/fuzz_sql_metamorphic.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_rbac_injection"
path = "fuzz_targets/fuzz_rbac_injection.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_vsr_protocol"
path = "fuzz_targets/fuzz_vsr_protocol.rs"
test = false
doc = false
bench = false

[package.metadata.cargo-machete]
# kimberlite is the facade exercised by multiple fuzz targets
ignored = ["kimberlite"]
