[package]
name = "kimberlite-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bytes = "1.10"
chrono = "0.4"
arbitrary = { version = "1", features = ["derive"] }
tempfile = "3"
postcard = { version = "1", features = ["alloc"] }
once_cell = "1"

[dependencies.kimberlite]
path = "../crates/kimberlite"
# `fuzz-reset` is mandatory for the persistent-mode stateful targets
# (fuzz_sql_metamorphic, fuzz_rbac_injection, fuzz_sql_norec,
# fuzz_sql_pqs). Production builds of kimberlite omit this feature.
features = ["fuzz-reset"]

[dependencies.kmb-wire]
package = "kimberlite-wire"
path = "../crates/kimberlite-wire"

[dependencies.kmb-crypto]
package = "kimberlite-crypto"
path = "../crates/kimberlite-crypto"

[dependencies.kimberlite-query]
path = "../crates/kimberlite-query"

[dependencies.kmb-storage]
package = "kimberlite-storage"
path = "../crates/kimberlite-storage"

[dependencies.kmb-kernel]
package = "kimberlite-kernel"
path = "../crates/kimberlite-kernel"

[dependencies.kimberlite-vsr]
path = "../crates/kimberlite-vsr"

[dependencies.kimberlite-server]
path = "../crates/kimberlite-server"

[dependencies.kimberlite-sim]
path = "../crates/kimberlite-sim"

[dependencies.kimberlite-rbac]
path = "../crates/kimberlite-rbac"

[dependencies.kimberlite-abac]
path = "../crates/kimberlite-abac"

[dependencies.kimberlite-types]
path = "../crates/kimberlite-types"

[dependencies.sqlparser]
version = "0.54"

[[bin]]
name = "fuzz_wire_deserialize"
path = "fuzz_targets/fuzz_wire_deserialize.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_crypto_encrypt"
path = "fuzz_targets/fuzz_crypto_encrypt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_sql_parser"
path = "fuzz_targets/fuzz_sql_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_storage_record"
path = "fuzz_targets/fuzz_storage_record.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_kernel_command"
path = "fuzz_targets/fuzz_kernel_command.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_rbac_rewrite"
path = "fuzz_targets/fuzz_rbac_rewrite.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_rbac_bypass"
path = "fuzz_targets/fuzz_rbac_bypass.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_abac_evaluator"
path = "fuzz_targets/fuzz_abac_evaluator.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_wire_vsr"
path = "fuzz_targets/fuzz_wire_vsr.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_storage_decompress"
path = "fuzz_targets/fuzz_storage_decompress.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_superblock"
path = "fuzz_targets/fuzz_superblock.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_auth_token"
path = "fuzz_targets/fuzz_auth_token.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_sql_metamorphic"
path = "fuzz_targets/fuzz_sql_metamorphic.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_rbac_injection"
path = "fuzz_targets/fuzz_rbac_injection.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_vsr_protocol"
path = "fuzz_targets/fuzz_vsr_protocol.rs"
test = false
doc = false
bench = false

[[bin]]
# Structure-aware fuzzing of the wire request path via Arbitrary derives.
# Mutates at variant + field level rather than bytes through FrameDecoder,
# so ~0% of inputs are rejected at framing and coverage reaches handlers
# immediately. See docs-internal/contributing/constructor-audit-2026-04.md.
name = "fuzz_wire_typed"
path = "fuzz_targets/fuzz_wire_typed.rs"
test = false
doc = false
bench = false

[[bin]]
# Structure-aware fuzzing of the VSR message handlers. See fuzz_wire_typed.
name = "fuzz_vsr_typed"
path = "fuzz_targets/fuzz_vsr_typed.rs"
test = false
doc = false
bench = false

[[bin]]
# Grammar-weighted SQL generator. Seed-driven: the input is a `u64`
# that feeds `kimberlite_sim::sql_grammar::generate`. Drives coverage
# past the tokenizer into the planner + executor where metamorphic
# bugs live.
name = "fuzz_sql_grammar"
path = "fuzz_targets/fuzz_sql_grammar.rs"
test = false
doc = false
bench = false

[[bin]]
# NoREC oracle: generate an equivalent query pair whose results must
# agree. Disagreement = planner/executor bug.
name = "fuzz_sql_norec"
path = "fuzz_targets/fuzz_sql_norec.rs"
test = false
doc = false
bench = false

[[bin]]
# Pivoted Query Synthesis oracle: pick a row, synthesize a WHERE
# clause that must return it, assert it does.
name = "fuzz_sql_pqs"
path = "fuzz_targets/fuzz_sql_pqs.rs"
test = false
doc = false
bench = false

[[bin]]
# One-shot utility to (re)generate the SQL grammar seed corpus.
# Invoked via `just fuzz-seed-sql-grammar`, not the nightly campaign.
name = "seed_sql_grammar"
path = "src/bin/seed_sql_grammar.rs"
test = false
doc = false
bench = false

[package.metadata.cargo-machete]
# kimberlite is the facade exercised by multiple fuzz targets
ignored = ["kimberlite"]
