[package]
name = "pressurecraft"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["Kimberlite Team"]
description = "Teaching workspace for understanding FCIS (Functional Core, Imperative Shell) pattern"
license = "Apache-2.0"
publish = false

# Make this a standalone workspace (not part of parent)
[workspace]

[dependencies]
bytes = { version = "1.9", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
proptest = "1.6"

[[example]]
name = "counter"
path = "examples/counter.rs"

[[example]]
name = "event_log"
path = "examples/event_log.rs"

[[example]]
name = "mini_database"
path = "examples/mini_database.rs"
