[package]
name = "kimberlite-abac"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Attribute-Based Access Control (ABAC) for Kimberlite"

[lints]
workspace = true

[dependencies]
kimberlite-types.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono = { workspace = true, features = ["serde"] }

[dev-dependencies]
proptest.workspace = true

[package.metadata.cargo-machete]
# thiserror and tracing used in policy evaluation
ignored = ["thiserror", "tracing"]
