[package]
name = "kimberlite-bench"
description = "Performance benchmarks and load tests for Kimberlite"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false  # Internal benchmarking tool

[lints]
workspace = true

[dependencies]
# Internal crates
kimberlite-types.workspace = true
kimberlite-crypto.workspace = true
kimberlite-storage.workspace = true
kimberlite-kernel.workspace = true
kimberlite-wire.workspace = true

# Core
bytes.workspace = true
anyhow.workspace = true

# Statistics
hdrhistogram = "7.5"
serde_json.workspace = true

# Comparative bench uses BLAKE3 to approximate Kimberlite's per-record
# verify-chain work without spinning up real log replay infrastructure.
blake3.workspace = true

[dev-dependencies]
# Benchmarking
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3"
rand.workspace = true

[[bench]]
name = "crypto"
harness = false

[[bench]]
name = "storage"
harness = false

[[bench]]
name = "kernel"
harness = false

[[bench]]
name = "wire"
harness = false

[[bench]]
name = "end_to_end"
harness = false

# Comparative bench vs PostgreSQL — runs Kimberlite append/read against a
# `docker run postgres:16` instance and prints a side-by-side ops/sec table.
# Not a Criterion bench — it's a bespoke harness that spins Postgres up and
# tears it down inside the process, so we ship it as a bench and let the
# `bench-compare` justfile recipe drive it. ROADMAP v0.5.0 item I.
[[bench]]
name = "postgres_comparative"
harness = false

[package.metadata.cargo-machete]
# anyhow used in benchmark error handling
ignored = ["anyhow"]
