[package]
name = "kimberlite-cli"
description = "Kimberlite unified CLI - the compliance-first database"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "kimberlite"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# Internal crates
kimberlite.workspace = true
kmb-types.workspace = true
kmb-client.workspace = true
kmb-wire.workspace = true
kmb-server.workspace = true
kmb-store.workspace = true

# CLI
clap.workspace = true

# Core
anyhow.workspace = true
tracing.workspace = true

# Logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TOML config
toml = "0.8"
serde.workspace = true

# Pretty CLI output
owo-colors = { version = "4", features = ["supports-colors"] }
comfy-table = "7"
indicatif = "0.17"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile.workspace = true
