[package]
name = "kimberlite-cli"
description = "Kimberlite unified CLI - the compliance-first database"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false  # CLI tool, not a library

[[bin]]
name = "kimberlite"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# Internal crates
kimberlite.workspace = true
kimberlite-types.workspace = true
kimberlite-client.workspace = true
kimberlite-wire.workspace = true
kimberlite-server.workspace = true
kimberlite-store.workspace = true
kimberlite-config.workspace = true
kimberlite-dev.workspace = true
kimberlite-migration.workspace = true
kimberlite-cluster.workspace = true
kimberlite-sim.workspace = true

# CLI
clap.workspace = true
clap_complete = "4"

# Core
anyhow.workspace = true
tracing.workspace = true

# Logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TOML config
toml = "0.9"
serde.workspace = true
serde_json.workspace = true

# Async runtime
tokio = { version = "1", features = ["full"] }

# Pretty CLI output
owo-colors = { version = "4", features = ["supports-colors"] }
comfy-table = "7"
indicatif = "0.18.3"

[package.metadata.cargo-machete]
# kimberlite-store used in cluster commands, serde used in config serialization
ignored = ["kimberlite-store", "serde"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile.workspace = true
