[package]
name = "kimberlite-client"
description = "Kimberlite RPC client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Internal crates
kimberlite-types.workspace = true
kimberlite-wire.workspace = true

# Core
bytes.workspace = true
thiserror.workspace = true

# Observability
tracing.workspace = true

# Optional: serde-based typed row mapping
serde = { workspace = true, optional = true }

# Optional: tokio runtime for the async client (S2.1)
tokio = { workspace = true, optional = true, features = ["net", "io-util", "sync", "rt", "macros"] }

[features]
default = ["typed-rows", "tokio"]
# Enables `Client::query_typed::<T>()` via serde deserialisation.
typed-rows = ["dep:serde"]
# Enables the async client (`AsyncClient`) backed by tokio.
# Building without this keeps `kimberlite-client` runtime-agnostic.
tokio = ["dep:tokio"]

[dev-dependencies]
tempfile.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
# Spawned in-process for the async-parity integration test.
kimberlite-server.workspace = true
kimberlite.workspace = true
# Phase 6 e2e test (ROADMAP v0.5.0 item C) — hashes the wire-returned
# export body and looks up breach events by UUID.
base64 = { workspace = true }
uuid = { workspace = true }
